# portfolio

./: README.md  _sidebar.md  index.html
APT-Analysis/: README.md
APT-Analysis/Andariel/: README.md
APT-Analysis/Kimsuky/: README.md
APT-Analysis/Lazarus/: Magic-Rat-Campaign.md  README.md  Scenario-Domain-Policy-PMS.md
APT-Analysis/Lockbit/: README.md
APT-Analysis/OilRig/: README.md  Scenario-DB-Backup-Exfil.md
APT-Analysis/Qilin/: README.md
About/: Career.md  README.md  Resume.md  Statement.md
BAS-Simulation/: README.md
BAS-Simulation/C2_Framework/My_Rat/: README.md  Simulation 개발 문서.md
BAS-Simulation/C2_Framework/My_Rat/Agent/: Cargo.toml
BAS-Simulation/C2_Framework/My_Rat/Agent/src/: main.rs
BAS-Simulation/C2_Framework/My_Rat/Agent/src/Module/: mod.rs
BAS-Simulation/C2_Framework/My_Rat/Agent/src/Module/Executor/: COM.rs  SYSCALL.rs  mod.rs
BAS-Simulation/C2_Framework/My_Rat/Agent/src/Module/Scanner/: infra.rs  mod.rs
BAS-Simulation/Scenarios/: README.md  Scenario-CIS-Benchmark-Audit.md  Scenario-Visual-Studio-Infection.md
CVE-Research/: README.md
CVE-Research/2017/: README.md
CVE-Research/2017/CVE-2017-10217/: README.md
CVE-Research/2024/: README.md
CVE-Research/2024/CVE-2024-20656/: README.md
CVE-Research/2025/: README.md
CVE-Research/2026/: README.md
Portfolio/: CVE-Highlights.md  Projects.md  README.md  Skills.md
Tools/: README.md
docs/: .gitignore  README.md
docs/Embeded/: README.md
docs/Reports/: Web-Pentest-Report.md
docs/opencv/: RM.txt
docs/캡스톤디자인/: ai_module.py  auto_module.py  capture_module.py
(+372 files in other folders)
