[package]
name = "Agent"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.59", features = [
"Win32_System_Variant",
"Win32_Foundation",
"Win32_System_Com",
"Win32_System_WindowsProgramming",
"Win32_UI_WindowsAndMessaging",
"Win32_System_Registry",
"Win32_System_Ole",
"Win32_UI_Shell",
"Win32_System_Threading",
"Win32_Security",
"Win32_Storage_FileSystem",
"Win32_System_IO",
] }
ldap3 = "0.11"